- 0.9.17?:
       - measurement device with measurement metadata support
       - bugfixes and improvements in redvyprAddressWidget
- 0.9.16:
       - renamed hostname to host and hostname_localhost to host_local in redvypr_address
       - major improvements for metadata and database functionality
         - support for timescaledb and sqlite3
         - gui to show databases and to choose read options
- 0.9.15:
       - metadata simplified (global, not device specific) and improved (metadata widget)
       - former RedvyprAddress.match renamed to .match_filter
       - RedvyprAddress.match re-implemented with new logic that is also looking at the datakeys
       - timescaledb implemented
       - xlsxwriter bugs fixed
       - fileio devices resorted
       - new readme
       - bug fixes and improvements in calibration
       - tar sensor bug fix
       - timescaledb support added
       - sqlite3 raw data file format added
       - calibration device improved
- 0.9.14:
       - RedvyprAddress syntax changed
       - calibration device improved
       - netcdfwriter updated
       - several minor bug fixes
- 0.9.13:
       - TablePlotDevice added
       - datafilter improved
- 0.9.12:
       - cleanup of address widgets
       - datafilter device and necessary changes
- 0.9.11:
       - moved to PyQt6
- 0.9.10:
       - several small feature in XYPlotWidget
       - bug fixes calibration to work again
- 0.9.9:
       - cleanup of pydanticConfigWidget and implementation of "NoneType" and "Optional"
       - improved generic sensor to allow entries to packetid from rawdatapacket
- 0.9.8:
        - added figlet and asciiart
- 0.9.7:
        - fixes in xlsxwriter
        - fixes in csvwriter
        - improved datastreamsWidget
        - bug in distribute_data (re-arranged for loops)
        - added clear_datainqueue_before_start flag in device base config
- 0.9.6:
        - bug in generic_sensor
        - removed debug print statements
- 0.9.5: